fixed cast cards gap on over 1024px width screens

--- a/src/containers/MoviePage/index.scss
+++ b/src/containers/MoviePage/index.scss
@@ -294,7 +294,7 @@ $main-blue: rgb(1, 1, 29);
     gap: 13px;
   }
 
-  .castcontainer__cards {
+  .main .castcontainer__cards {
     gap: 60px;
   }
 
